fixing horizontal scrollbars on mobile again

--- a/css/styles.sass
+++ b/css/styles.sass
@@ -263,7 +263,7 @@ ul#posts
 
   header
     margin-bottom: 10px
-    padding: 10px
+    padding: 10px 0 10px 0
 
     h1
       font-size: 24px
